--- a/Perfecting_Classifications/Readme
+++ b/Perfecting_Classifications/Readme
@@ -1,3 +1,3 @@
-## Introduction
+# Introduction
 
 This repository contains the NN applied to various classification problems with the only goal to improve accuracy to best possible value. The same could have been done with ML Classifier libraries too but they are not very efficient as Neural Nets.
