--- a/Optimizing-Neural-Networks/Readme
+++ b/Optimizing-Neural-Networks/Readme
@@ -1,1 +1,1 @@
-Various optimization techniques are used bring more randomness in the Neural Network and help it to achieve higher accuracy cloase to Bayes Optimal Level.
+Various optimization techniques are used to bring more randomness in the Neural Network and help it to achieve higher accuracy cloase to Bayes Optimal Level.
